monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:
    - host: grafana.psre.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
